# generative-ai-for-developers-learning-path

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: create-image-captioning-models.md  encoder-decoder-architecture-learning.md  intro-textemb-vectorsearch.md  transformer-models-and-bert-model.md
src/classify_text/: __main__.py  classify_text.py
src/image_captioning/: __main__.py  image_captioning.py
src/text_generation/: CustomTraining.py  MyModel.py  OneStep.py  __about__.py  __main__.py  text_generate.py
tests/: __init__.py
